# ice-poker-tabletamer

./: .gitignore  README.md  pyproject.toml  python_commands
requirements/: issues.txt  readme.txt  sys_requirements.txt  to_do.txt  user_instructions.txt
src/: application.py  log.txt  main.py  settings_copy.json  setup.py  testing.py
src/assets/: main_window.ui
src/services/: utilities.py
src/services/input_controllers/: constants.py  entities.py  exceptions.py  hotkey_manager.py  hotkeys_config.py  mouse_controller.py  mouse_listener.py
src/services/layout/: layout_manager.py
src/services/overlay/: overlay.py  overlay_manager.py
src/services/tables/: entities.py  events.py  exceptions.py  table_config.py  table_manager.py  table_tracker.py  utilities.py
src/settings/: hotkey_settings.json  layout_settings copy.json  layout_settings.json  table_settings copy.json  table_settings.json
src/tests/services/layout/: test_layout_manager.py
src/tests/services/tables/: test_table_manager.py
src/tests/utils/: test_configuration_parser.py
src/utils/: configuration_parser.py
src/widgets/constants/: hotkeys.py
src/widgets/main/: hotkeys_setup_methods.py  layout_setup.py  layout_setup_methods.py  main.py  main_methods.py  main_setup.py  main_thread.py  table_setup.py  table_setup_methods.py
src/widgets/overlay/: overlay.py  overlay_manager.py
src/widgets/table_layout/: main_table_template.py  table_template.py
src/widgets/utils/: popup.py
src/widgets/workers/: task.py  worker.py  worker_functions.py
