[tool.poetry]
name = "ice-poker-tabletamer"
version = "0.1.0"
description = ""
authors = ["Fruitellar <109595648+Fruitellar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ice_poker_tabletamer"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.5.1"
PyAutoGUI = "^0.9.54"
mypy = "^1.4.1"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"
PyGetWindow = "^0.0.9"
psutil = "^5.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
